<resources>
    <string name="app_name">smartup</string>

    <string name="color_challenge_hint">Enter the color name</string>
    <string name="color_red">Red</string>
    <string name="color_green">Green</string>
    <string name="color_blue">Blue</string>
    <string name="color_yellow">Yellow</string>
    <string name="color_black">Black</string>
    <string name="color_white">White</string>

    <string name="color_submit">Check</string>

    <string name="date_challenge_hint">Enter the date for today</string>
    <string name="date_challenge_format">dd.MM.yyyy</string>
    <string name="date_challenge_helper">Dots, slashes or spaces are OK</string>
    <string name="date_submit">Check</string>

    <string name="dots_title">Pattern lock</string>
    <string name="dots_draw_instruction">Draw the pattern "%1$s"</string>
    <string name="dots_draw_instruction_placeholder">Draw the pattern</string>
    <string name="dots_new_pattern">New pattern</string>
    <string name="dots_reset_pattern">Reset</string>
    <string name="dots_progress">Selected: %1$d/%2$d</string>
    <string name="dots_progress_placeholder">Selected: 0/0</string>
    <string name="dots_wrong_pattern">Wrong pattern, try again</string>
    <string name="dots_pattern_complete">Pattern matched!</string>
    <string name="dots_pattern_name">Pattern: %1$s</string>
    <string name="dots_pattern_name_placeholder">Pattern: ?</string>

    <string name="alarms_title">Alarms</string>
    <string name="alarms_subtitle">Gentle wake-up every day</string>
    <string name="alarms_empty">No alarms yet</string>
    <string name="alarms_add">Create alarm</string>
    <string name="alarms_add_compact">Add alarm</string>

    <string name="settings_title">Settings</string>
    <string name="settings_theme">Theme</string>
    <string name="settings_theme_system">System default</string>
    <string name="settings_theme_light">Light</string>
    <string name="settings_theme_dark">Dark</string>
    <string name="settings_time_format">Time format</string>

    <string name="time_picker_style_clock">Use clock</string>

    <string name="alarm_added">Alarm added</string>
    <string name="alarm_deleted">Alarm deleted</string>
    <string name="alarm_switch_on">On</string>
    <string name="alarm_switch_off">Off</string>
    <string name="alarm_time_placeholder">00:00</string>
    <string name="alarm_meta_none">No description</string>
    <string name="alarm_description_fallback">Gentle morning</string>
    <string name="alarm_info">Active: %1$d. Next: %2$s%3$s</string>
    <string name="alarm_info_date"> (date: %1$s)</string>
    <string name="alarm_info_weekdays"> (%1$s)</string>
    <string name="time_format_24h_toast">24-hour format</string>
    <string name="time_format_12h_toast">12-hour format</string>

    <string name="edit_time_title">Alarm time</string>
    <string name="edit_time_format_hint">24-hour format</string>
    <string name="edit_description_hint">Alarm name</string>
    <string name="edit_challenge_title">Challenge</string>
    <string name="edit_challenge_none">No challenge</string>
    <string name="edit_challenge_choose">Choose challenge</string>
    <string name="edit_date_title">Date &amp; repeat</string>
    <string name="edit_select_date">Pick date</string>
    <string name="edit_clear_date">No date</string>
    <string name="edit_date_format">Date: %1$d.%2$d.%3$d</string>
    <string name="edit_weekdays_title">Weekdays</string>
    <string name="weekday_mon">Mon</string>
    <string name="weekday_tue">Tue</string>
    <string name="weekday_wed">Wed</string>
    <string name="weekday_thu">Thu</string>
    <string name="weekday_fri">Fri</string>
    <string name="weekday_sat">Sat</string>
    <string name="weekday_sun">Sun</string>
    <string name="edit_enabled_label">Alarm enabled</string>
    <string name="edit_save">Save</string>
    <string name="edit_delete">Delete alarm</string>

    <string name="challenge_dialog_title">Challenge</string>
    <string name="challenge_none">No challenge</string>
    <string name="challenge_snake">Snake</string>
    <string name="challenge_dots">Pattern lock</string>
    <string name="challenge_math">Math example</string>
    <string name="challenge_date">Enter the date for today</string>
    <string name="challenge_color">Guess the color</string>
    <string name="challenge_shake">Shake phone</string>
    <string name="challenge_hold">Hold button</string>
    <string name="challenge_random">Random challenge</string>
    <string name="common_cancel">Cancel</string>

    <string name="snake_instruction">Collect 5 apples</string>
    <string name="snake_score">Apples: %1$d/5</string>
    <string name="snake_score_initial">Apples: 0/5</string>
    <string name="snake_up">Up</string>
    <string name="snake_down">Down</string>
    <string name="snake_left">Left</string>
    <string name="snake_right">Right</string>

    <string name="math_submit">Check</string>
    <string name="math_question">%1$d + %2$d = ?</string>
    <string name="math_title">Solve the problem</string>
    <string name="math_wrong">Wrong answer, try again</string>
    <string name="color_title">Name the color</string>
    <string name="color_wrong">Wrong, try again</string>
    <string name="date_title">Today\'s date</string>
    <string name="date_wrong">Wrong date, try again</string>
    <string name="challenge_complete">Correct!</string>
    <string name="snake_title">Snake</string>
    <string name="date_challenge_format_hint">DD.MM.YYYY</string>

    <string name="alarm_ringing_toast">Alarm ringing!</string>
    <string name="alarm_notification_title">Alarm</string>
    <string name="alarm_notification_text">Tap to stop</string>
    <string name="alarm_channel_name">Alarms</string>
    <string name="alarm_channel_desc">Alarm notifications</string>
    <string name="alarm_no_challenge_title">Alarm</string>
    <string name="alarm_stop">Stop</string>
    <string name="alarm_snooze">Snooze 10 minutes</string>
    <string name="shake_title">Shake phone</string>
    <string name="shake_instruction">Shake the device 10 times</string>
    <string name="shake_progress">%1$d/%2$d</string>
    <string name="shake_progress_placeholder">0/10</string>
    <string name="hold_title">Hold</string>
    <string name="hold_instruction">Hold the button for 10 seconds</string>
    <string name="hold_button">Hold</string>
    <string name="extra_challenges">Extra challenges</string>

    <string name="edit_morning_ritual">Morning ritual</string>
    <string name="edit_morning_me">No challenge</string>
    <string name="edit_subtitle"></string>
    <string name="edit_how_to_start">How do you want to start your day?</string>
    <string name="edit_meds">Medication</string>
    <string name="edit_slow_morning">Slow morning</string>
    <string name="edit_focus">Focus</string>
    <string name="edit_turn_off_hint">Alarm will stop after completion</string>
    <string name="edit_activation">Wake-up activation</string>
    <string name="edit_tab_weekdays">Weekdays</string>
    <string name="edit_tab_everyday">Every day</string>
    <string name="edit_tab_weekends">Weekends</string>
    <string name="edit_care_on">Alarm is on</string>
    <string name="edit_care_off">Alarm is off</string>
    <string name="chip_snake">Snake</string>
    <string name="chip_dots">Dots</string>
    <string name="chip_math">Math</string>
    <string name="chip_color">Color</string>

    <string name="time_picker_style_label">Time input style</string>
    <string name="time_picker_style_spinner">Spinner</string>
    <string name="settings_time_format_24h">24-hour format</string>
    <string name="time_am">AM</string>
    <string name="time_pm">PM</string>
    <string name="settings_language">Language</string>
    <string name="lang_system">System</string>
    <string name="lang_ru">Russian</string>
    <string name="lang_en">English</string>
    <string name="settings_open_menu">Settings</string>

    <string name="edit_create_button">Add alarm</string>

    <string name="ai_agent_open">Open AI agent</string>
    <string name="ai_agent_title">AI assistant</string>
    <string name="ai_agent_subtitle">Ask anything about the app and your alarms</string>
    <string name="ai_agent_card_title">Coming soon</string>
    <string name="ai_agent_card_body">Here will be an AI assistant to help you set up alarms, routines, and challenges.</string>
    <string name="ai_agent_input_hint">Ask the assistant</string>
    <string name="ai_agent_start">Start chat</string>
    <string name="ai_agent_back">Back</string>
</resources>
